# Algorithms-and-Structures

./: README.md
pasha_RGR/GraphClass-main/: CMakeCache.txt  CMakeLists.txt  Graph_RGR  Makefile  cmake_install.cmake
pasha_RGR/GraphClass-main/src/: SimpleGraph.cpp  SimpleGraph.h  Task2.h  Task3.h  main.cpp
pasha_RGR/GraphClass-main/src/elements/: Edge.cpp  Edge.h  Vertex.cpp  Vertex.h
pasha_RGR/GraphClass-main/src/forms/: GraphForm.cpp  GraphForm.h  LGraph.cpp  LGraph.h  MGraph.cpp  MGraph.h
pasha_RGR/GraphClass-main/src/iterators/: EdgeIterator.cpp  EdgeIterator.h  VertexIterator.cpp  VertexIterator.h
pasha_RGR/GraphClass-main/src/menu/: menu.cpp  menu.h
